--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -14,14 +15,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_plug_24"
-            android:layout_weight="25"/>
+            android:layout_gravity="center"
+            android:layout_weight="25" />
         <TextView
             android:id="@+id/tv_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:hint="text"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:layout_margin="10dp"/>
     </LinearLayout>
 
 
@@ -38,7 +41,7 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_undo_64"
             android:background="@android:color/transparent"
-            android:layout_marginEnd="10dp"/>
+            android:layout_marginEnd="25dp"/>
 
         <ImageButton
             android:id="@+id/btn_next"
