--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -3,17 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="5"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
         android:orientation="vertical">
         <ImageView
             android:id="@+id/iv_picture"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:src="@drawable/ic_plug_24"
             android:layout_gravity="center"
             android:layout_weight="25" />
@@ -30,25 +31,32 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="horizontal"
         android:gravity="center"
-        android:layout_weight="1">
+        android:layout_weight="5">
 
-        <ImageButton
+
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_prev"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_undo_64"
-            android:background="@android:color/transparent"
-            android:layout_marginEnd="25dp"/>
+            android:layout_width="@dimen/picked_width"
+            android:layout_height="@dimen/picked_height"
+            app:iconPadding="0dp"
+            app:icon="@drawable/ic_undo_64"
+            app:iconTint="@color/undo_av"
+            android:backgroundTint="@color/white"
+            android:layout_marginEnd="25dp"
+            app:cornerRadius="100dp"/>
 
-        <ImageButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_next"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_arrow_forward__64"
-            android:background="@android:color/transparent"/>
+            android:layout_width="@dimen/picked_width"
+            android:layout_height="@dimen/picked_height"
+            app:iconPadding="0dp"
+            app:icon="@drawable/ic_arrow_forward__64"
+            app:iconTint="@color/forward"
+            android:backgroundTint="@color/white"
+            app:cornerRadius="100dp"/>
 
     </LinearLayout>
 
