--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="undo_av">#FDC73B</color>
+    <color name="undo_un">#A0A0A0</color>
+    <color name="forward">#60C11D</color>
+
 </resources>
